05-Metal&Traefik/02-Ithost/01-Ithost-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ithost
spec:
  selector:
    matchLabels:
      app: ithost
  replicas: 2
  template:
    metadata:
      labels:
        app: ithost
    spec:
      containers:
      - name: ithost-konteyneri
        image: techakademi/ithost:3.1
