05-Metal&Traefik/02-Ithost/02-Ithost-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ithost-servisi
  labels:
    app: ithost
spec:
  type: LoadBalancer
  selector:
    app: ithost
  ports:
  - port: 80
    protocol: TCP
