05-Metal&Traefik/02-Ithost/04-Ingress-Route.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ithost-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`www.techakademi.com`)
      kind: Rule
      services:
        - name: ithost-servisi
          port: 80
